manifest.yml update

--- a/OnlineShoppingRest/manifest.yml
+++ b/OnlineShoppingRest/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 name: online-shopping-cart
-path: target/OnlineShoppingRest.war
+path: target/OnlineShoppingRest.jar
 domain: cfapps.io
 memory: 512m
 instances: 1
