--- a/OnlineShoppingRest/manifest.yml
+++ b/OnlineShoppingRest/manifest.yml
@@ -4,3 +4,6 @@ path: target/OnlineShoppingRest.jar
 domain: cfapps.io
 memory: 512m
 instances: 1
+buildpack: https://github.com/cloudfoundry/java-buildpack
+  env:
+    SPRING_PROFILES_ACTIVE : cloud
