--- a/OnlineShoppingRest/manifest.yml
+++ b/OnlineShoppingRest/manifest.yml
@@ -1,6 +1,13 @@
+# this manifest deploys two applications
+# apps are in flame and spark directories
+# flame and spark are in fireplace
+# cf push should be run from fireplace
 applications:
-name: online-shopping-cart
-path: OnlineShoppingRest.jar
-domain: cfapps.io
-memory: 512m
-instances: 1
+- name: online-shopping-cart
+  memory: 512m
+  instances: 1
+  domain: local.pcfdev.io
+  path: target/OnlineShoppingRest-0.0.1-SNAPSHOT.jar
+ buildpack: https://github.com/cloudfoundry/java-buildpack
+  env:
+    SPRING_PROFILES_ACTIVE : cloud
